[project]
name = "action-watch"
description = "Check for latest versions of GitHub Actions."
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "loguru",
    "requests",
    "requests-cache",
    "PyYAML",
    "handpick",
    "helper-auth",
]

[project.scripts]
action-watch = "action_watch:main"

[tool.setuptools]
py-modules = ["action_watch"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
